--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       commonly used relative units . Some of commonly used css units are:
     </p>
     <main>
+      <!-- px -->
       <section class="px">
         <h2>1. px</h2>
         <h3>Definition</h3>
@@ -29,12 +30,16 @@
           Pixels or simply <b>px</b> are one of the most common length units in
           CSS. In CSS, 1 pixel is formally defined as 1/96 of an inch.
         </p>
+        <p>
+          <code>.paragraph{<br />font-size : 16px <br />}</code>
+        </p>
         <h3>Examples</h3>
         <p id="px-example">
           This example uses 16px of font size. This is the default font-size for
           most of the browsers
         </p>
       </section>
+      <!-- em -->
       <section class="em">
         <h2>2. em</h2>
         <h3>Definition</h3>
@@ -44,6 +49,10 @@
           capital M in the typeface and size being used. When used with the
           font-size property, em inherits the font-size from its parent element.
         </p>
+        <p>
+          <code>.paragraph{<br />font-size : 1.5em <br />}</code>
+        </p>
+
         <h3>Examples</h3>
         <p id="em-parent">I am parent with 30px of font-size</p>
         <div class="parent">
@@ -53,6 +62,7 @@
           </p>
         </div>
       </section>
+      <!-- rem -->
       <section class="rem">
         <h2>3. rem</h2>
         <h3>Definition</h3>
@@ -65,6 +75,10 @@
           browser's default font size, then the font-size of p will scale up or
           down accordingly.
         </p>
+        <p>
+          <code>.paragraph{<br />font-size : 1.5rem <br />}</code>
+        </p>
+
         <h3>Examples</h3>
         <div class="parent">
           <p id="rem-parent">I am parent with 30px of font-size</p>
@@ -75,6 +89,7 @@
           </p>
         </div>
       </section>
+      <!-- percentage -->
       <section class="percentage">
         <h2>4. percentage (%)</h2>
         <h3>Definition</h3>
@@ -83,6 +98,10 @@
           set an element's font-size as a percentage, it will be a percentage of
           the font-size of the element's parent.
         </p>
+        <p>
+          <code>.paragraph{<br />font-size : 120% <br />}</code>
+        </p>
+
         <h3>Examples</h3>
         <p id="percentage-parent">I am parent with 30px of font-size</p>
         <div class="parent">
@@ -96,6 +115,7 @@
           the size of root element.
         </p>
       </section>
+      <!-- vw -->
       <section class="vw">
         <h2>4. vw</h2>
         <h3>Definition</h3>
@@ -103,6 +123,10 @@
           <b>vw</b>, also commonly known as view width, is relative to viewport
           width. 1vw is 1% of the width of the viewport.
         </p>
+        <p>
+          <code>.container{<br />height : 100vw <br />}</code>
+        </p>
+
         <h3>Examples</h3>
         <div id="view-width">
           I am using 100vw. I will take up the full width available. So if you
@@ -111,20 +135,24 @@
         </div>
       </section>
       <section class="vh">
-        <h2>vh</h2>
+        <h2>5. vh</h2>
         <h3>Definition</h3>
         <p>
           <b>vh</b>, also commonly known as view height, is relative to viewport
           height. 1vh is 1% of the height of the viewport.
         </p>
+        <p>
+          <code>.container{<br />height : 100vh <br />}</code>
+        </p>
         <h3>Examples</h3>
+
         <div id="view-height">
           I am using 100vh. I will take up the 100% of height available. So if
           the browser window is 900 pixels high, my height will be 900 pixels.
         </div>
       </section>
       <section class="dvh">
-        <h2>dvh</h2>
+        <h2>6. dvh</h2>
         <h3>Definition</h3>
         <p>
           They were introduced, when mobile browsers started changing viewport
@@ -138,6 +166,9 @@
           for your website's content. However, browser, when you scroll down the
           browser UI only takes up 10px, which leaves your website content with
           90px.
+        </p>
+        <p>
+          <code>.container{<br />height : 100dvh <br />}</code>
         </p>
         <h3>Examples</h3>
         <div id="dynamic-view-height">
